<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Storage</string>
    <string name="file">File</string>
    <string name="sp">SharedPreferences</string>
    <string name="db">Database</string>
    <string name="item_name">名称:</string>
    <string name="item_source">来源:</string>
    <string name="item_type">类型:</string>
    <string name="item_price">价格:</string>
    <string name="item_weight">重量:</string>
    <string name="item_explain">介绍:</string>
    <string name="cancel">取消</string>
    <string name="modify">修改</string>
    <string name="buy">购买</string>
    <string name="detail">详情</string>
    <string name="insert">插入</string>
    

</resources>
